@@ -10,6 +10,10 @@ This should generate Barry's example, modulo some quotes and newlines.
 import unittest, sys, StringIO
 from test.test_support import run_unittest
 
+import warnings
+warnings.filterwarnings("ignore", "the MimeWriter module is deprecated.*",
+                        DeprecationWarning)
+
 from MimeWriter import MimeWriter
 
 SELLER = '''\
